<resources>
    <string name="app_name">Feedo</string>

    <string name="drawer_open_content_desc">Open</string>
    <string name="drawer_close_content_desc">Close</string>
    <string name="action_settings">Settings</string>

    <string name="toast_crash">Something went wrong, But don\'t worry we are working on that</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="logout">Logout</string>

    <!-- common terms -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pick_image">Pick Image</string>
    <string name="msg_confirm_logout">Would you like to logout ?</string>
    <string name="quiz_start_in">Feedback Start In\n</string>
    <string name="Gender">Gender</string>
    <string name="setting_language">Change Language</string>
    <string name="please_choose_language">Please Choose Language/ भाषा का चयन करें</string>
    <string name="hindi">हिंदी</string>
    <string name="english">English</string>
    <string name="language">Language </string>
    <string name="change_language">Change Language</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_mobile_number">ActivityMobileNumber</string>
    <string name="log_in"><u> Log in </u></string>
    <string name="thank_you"><u> Thank you </u></string>
    <string name="msg_enter_mobile_number">Enter Mobile Number</string>
    <string name="msg_invalid_mobile_number">Invalid Mobile Number</string>
    <string name="msg_check_internet">Please check internet</string>
    <string name="sec">" sec"</string>
    <string name="give">Please select an option.</string>
    <string name="quiz_submitted">Thanks, for your feedback!!!</string>
    <string name="ERROR_MSG_CHECK_INTERNET">You are not connected to the internet</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="start_feedback">Start Feedback</string>
    <string name="logo" translatable="false">logo</string>
    <string name="your_feedback_is_important_for_us">Your feedback is important for us</string>
    <string name="mobile">Mobile</string>
    <string name="splash_background">splash</string>
    <string name="overlay">overlay</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="date_of_anniversary">Date of anniversary</string>
    <string name="submit">Submit</string>
    <string name="feedback">We appreciate your inputs and look forward to serve you the best</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="organization">Organization</string>
    <string name="answer_1">answer_1</string>
    <string name="answer_2">answer_2</string>
    <string name="answer_3">answer_3</string>
    <string name="answer_4">answer_4</string>

    <string name="restart_quiz">Restart Quiz</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="done">done</string>
    <string name="qdna">Quiz data not available ?</string>
    <string name="yes_1">Yes</string>
    <string name="question">Question -</string>
    <string name="pbate">Press back again to exit</string>
    <string name="dywtl">Do you want to logout?</string>
    <string name="ic">Invalid Client</string>
    <string name="cyn">Check your network</string>
    <string name="start_quiz">Are you sure you want start feedback?</string>

    <string-array name="lang">
        <item>English</item>
        <item>हिंदी</item>
    </string-array>

    <integer-array name="lang_id">
        <item>1</item>
        <item>2</item>
    </integer-array>
</resources>
