<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".activity.SplashActivity">


    <ImageView
        android:id="@+id/ivSplash"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/splash_background" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@color/translucent_black"
        android:contentDescription="@string/overlay"
        />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:background="@drawable/logo"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:contentDescription="@string/logo"
        />

</FrameLayout>