<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SplashActivity">

    <include layout="@layout/toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/splash_background"
            android:scaleType="centerCrop" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/overlay"
            android:scaleType="fitXY"
            android:src="@color/translucent_black" />

        <TextView
            android:id="@+id/tvRestaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/organization"
            android:textColor="@color/light_white"
            android:textSize="35sp" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/logo" />

        <android.support.v7.widget.CardView
            android:id="@+id/cvFeedback"
            android:layout_width="180dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="#E9D94D"
            app:cardCornerRadius="2dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:text="@string/start_feedback"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </android.support.v7.widget.CardView>

    </FrameLayout>
</LinearLayout>
