<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_splash"
        android:contentDescription="@string/splash_background"
        android:scaleType="centerCrop" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/overlay"
        android:scaleType="fitXY"
        android:src="@color/translucent_black" />

    <android.support.v7.widget.CardView
        android:id="@+id/cvCustumerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@color/translucent_black"
        android:visibility="visible"
        app:cardCornerRadius="0dp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/logo"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text=""
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etMobile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/mobile"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:text=""
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="4dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/llDob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvDob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/date_of_birth"
                            android:textColor="@color/dark_gray"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|bottom"
                            android:text="@string/date_of_birth"
                            android:textSize="10sp" />

                    </FrameLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/red" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/llDoa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvDoa"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/date_of_anniversary"
                            android:textColor="@color/dark_gray"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|bottom"
                            android:text="@string/date_of_anniversary"
                            android:textSize="10sp" />

                    </FrameLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/red" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingStart="0dp"
                android:paddingLeft="0dp">


                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/male"
                        android:textColor="@color/text_color"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/rFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/female"
                        android:textColor="@color/text_color"
                        android:textSize="14sp" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/btLogin"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/button_background"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </LinearLayout>


    </android.support.v7.widget.CardView>


</FrameLayout>