<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_splash"
            android:contentDescription="@string/splash_background" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/logo"
                        android:contentDescription="@string/logo" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:background="#90ffffff"
                    android:focusableInTouchMode="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/please_choose_language"
                        android:textColor="@color/black" />

                    <RelativeLayout
                        android:id="@+id/rlHindi"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_horizontal">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/btn_red_rounded"
                            android:padding="5dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:gravity="center_horizontal"
                                android:text="@string/hindi"
                                android:textColor="@color/white" />

                            <ImageView
                                android:id="@+id/ivDoneHindi"
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="5dp"
                                android:src="@drawable/ic_done"
                                android:visibility="gone"
                                android:contentDescription="@string/done"
                                android:layout_marginEnd="5dp"
                                android:layout_alignParentEnd="true" />
                        </RelativeLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rlEnglish"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_horizontal">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/btn_red_rounded"
                            android:padding="5dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:gravity="center_horizontal"
                                android:text="@string/english"
                                android:textColor="@color/white" />

                            <ImageView
                                android:id="@+id/ivDoneEnglish"
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="5dp"
                                android:src="@drawable/ic_done"
                                android:visibility="gone"
                                android:contentDescription="@string/done"
                                android:layout_marginEnd="5dp"
                                android:layout_alignParentEnd="true" />
                        </RelativeLayout>

                    </RelativeLayout>


                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>
