<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/light_white">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/logo" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/splash_background" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:id="@+id/cardViewCitizen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#90ffffff"
            app:cardCornerRadius="0dp"
            app:cardPreventCornerOverlap="true">


            <LinearLayout
                android:id="@+id/llParent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="25dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/your_feedback_is_important_for_us"
                        android:textAllCaps="false"
                        android:textColor="@color/splash_background"
                        android:textSize="18sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="25dp"
                    android:orientation="horizontal"

                    >

                    <EditText
                        android:id="@+id/etMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:text=""
                        android:textColor="@color/dark_gray"
                        android:textSize="18sp"
                        />

                </LinearLayout>


                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="150dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_background"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</FrameLayout>