<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/light_white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/splash_background" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:id="@+id/cardViewCitizen"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/cardview_background"
            app:cardCornerRadius="0dp"
            app:cardPreventCornerOverlap="true">


            <LinearLayout
                android:id="@+id/llParent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="2dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivLogo"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/logo"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/logo" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="25dp"
                    android:orientation="horizontal"

                    >

                    <EditText
                        android:id="@+id/etUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:inputType="text"
                        android:text=""
                        android:textColor="@color/dark_gray"
                        android:textSize="18sp"
                        android:autofillHints="@string/user_name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="25dp"
                    android:orientation="horizontal"

                    >

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLength="10"
                        android:text=""
                        android:textColor="@color/dark_gray"
                        android:textSize="18sp"
                        android:autofillHints="@string/password" />

                </LinearLayout>

                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="150dp"
                    android:layout_height="42dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/button_background"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginEnd="25dp" />

            </LinearLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>
</FrameLayout>